<resources>

    <string name="app_name">HTC ISO Control</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_screen">ISO control</string>
    <string name="firstitemtext">WARNING: this may brick you phone!!!</string>
    <string name="firstbuttontext">1. Select ISO file</string>
    <string name="fileis">Current file is:</string>
    <string name="filepath">PCTOOLS.ISO</string>
    <string name="mountbutton">2. Mount new ISO</string>
    <string name="aftermount">After mount new ISO, reconnect USB cable please!</string>
    <string name="done">DONE!</string>
    <string name="dobackup">Backup stock ISO!</string>
    <string name="restorebackup">Restore stock ISO!</string>
    <string name="parse">------------------------------------</string>

</resources>